// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render Icon with blue colorName to change color 1`] = `
<div>
  <div
    class="icon icon--theme  icon--blue "
  />
</div>
`;

exports[`Icon should render Text Icon 1`] = `
<div>
  <div
    class="icon    "
  >
    W
  </div>
</div>
`;

exports[`Icon should render blend Icon 1`] = `
<div>
  <div
    class="icon icon--theme   "
  />
</div>
`;

exports[`Icon should render spinner Icon with spinning animation 1`] = `
<div>
  <div
    class="icon icon--spinner icon--spin  "
  />
</div>
`;
